<resources>
    <string name="app_name">Call Timer</string>
    <string name="title_recents">Recents</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_timer">Timer</string>
    <string name="title_usage">Usage</string>

    <string name="text_no_call_log">Your call history is empty</string>
    <string name="text_no_favorites">No one is on your speed dial yet</string>
    <string name="text_no_contacts">You don\'t have any contacts yet</string>
    <string name="text_no_voicemail">Your voice mail inbox is empty</string>

    <string name="back">Back</string>
    <string name="call">Call</string>

    <string name="number_one">1</string>
    <string name="abc">ABC</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="def">DEF</string>
    <string name="ghi">GHI</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="jkl">JKL</string>
    <string name="mno">MNO</string>
    <string name="pqrs">PQRS</string>
    <string name="tuv">TUV</string>
    <string name="wxyz">WXYZ</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="plus">+</string>
    <string name="pound">#</string>
    <string name="star">*</string>

    <string name="text_create_new_contact">Create New Contact</string>

    <string name="snack_text_permissions">Call Timer needs permission to be the default phone app to function properly.</string>
    <string name="grant">Grant</string>
    <string name="toast_thanks">Thanks for permission!</string>
    <string name="toast_accepted">Call Timer is now your default dialer app.</string>
    <string name="toast_declined">Call Timer cannot function without being your default dialer.</string>
    <string name="toast_declined_call_permission">You cannot make calls without granting call permissions.</string>
    <string name="duration_default">00:00:00</string>
    <string name="call_log_denied_toast">Cannot show call logs without permission.</string>
    <string name="vibrate_denied_toast">Vibrate is needed for timer functionality.</string>
    <string name="contacts_denied_toast">Cannot show contacts without permission.</string>
    <string name="recent_no_permission_description_text">To see your call log, enable Call Log permission.</string>
    <string name="enable">Enable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_call_details">Call Details</string>
    <string name="yesterday">Yesterday</string>
    <string name="call_type_missed">Missed</string>
    <string name="call_type_outgoing">Outgoing</string>
    <string name="call_type_incoming_answered">Answered</string>
    <string name="call_type_answered_externally">Answered on Different Device</string>
    <string name="call_type_blocked">Blocked</string>
    <string name="call_type_rejected">Rejected</string>
    <string name="unknown">Unknown</string>
    <string name="custom">Custom</string>
    <string name="all">All</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="title_dialer">Dialer</string>
    <string name="dialer">Dialer</string>
    <string name="video">Video</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>
    <string name="permission_title_make_calls">Make Calls</string>
    <string name="permission_title_read_write_call_log">Read and Write Call log</string>
    <string name="permission_title_read_write_contacts">Read Write Contacts</string>
    <string name="permission_rationale_make_calls">In order for this app to replace your default dialer it needs permission to make calls.</string>
    <string name="permission_rationale_read_write_contacts">In order for this app to read your call logs properly it needs to be able to read your contacts.</string>
    <string name="permission_rationale_read_write_call_logs">In order for this app to replace your default dialer it needs permission to read and write call logs.</string>
    <string name="permission_rationale_calls_call_logs_contacts">In order for this app to replace your default dialer it needs permission to place calls, read and write call logs and read and write contacts.</string>
    <string name="settings">Settings</string>
    <string name="retry">Retry?</string>
    <string name="retry_business">The permission request was interrupted, try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_permanent_denial_make_calls">Permission to make calls was permanently denied. You must enable this permission in settings.</string>
    <string name="permission_permanent_denial_read_write_call_logs">Permission to read or write call logs was permanently denied. You must enable this permission in settings.</string>
    <string name="permission_permanent_denial_read_write_contacts">Permission to read or write contacts was permanently denied. You must enable this permission in settings.</string>
    <string name="permission_permanent_denial_calls_call_logs_contacts">Permission to place calls, read or write contacts or call logs was permanently denied. You must enable this permission in settings.</string>
    <string name="permission_title_calls_call_logs_contacts">Place calls, Read Call Logs, and Read Contacts</string>
    <string name="title_recents_long">View Recent Call Logs</string>
    <string name="title_clear_all_calls_dialog">Clear call history?</string>
    <string name="message_clear_all_calls_dialog">This will delete all calls from your history</string>
    <string name="ok">@android:string/ok</string>
    <string name="today">Today</string>
    <string name="older">Older</string>
    <string name="tooltip_recents">View recent call logs</string>
    <string name="tooltip_contacts">View contacts with phone numbers</string>
    <string name="tooltip_timer">View call timer stats and settings</string>
    <string name="tooltip_dial">Open dial pad</string>
    <string name="copy_number">Copy number</string>
    <string name="block">Block</string>
    <string name="delete">Delete</string>
    <string name="unblock">Unblock</string>
</resources>
