<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dialer">

    <fragment
        android:id="@+id/navigation_recents"
        android:name="com.rehyapp.calltimer.ui.recents.RecentsFragment"
        android:label="@string/title_recents"
        tools:layout="@layout/fragment_recents">
        <action
            android:id="@+id/action_navigation_recents_to_callDetailsFragment"
            app:destination="@id/callDetailsFragment"
            app:enterAnim="@anim/enter_from_right">
            <argument
                android:name="callIds"
                app:argType="long[]" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.rehyapp.calltimer.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.rehyapp.calltimer.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_dialer"
        android:name="com.rehyapp.calltimer.ui.dialer.DialerFragment"
        android:label="@string/title_dialer"
        tools:layout="@layout/fragment_dialer" />
    <fragment
        android:id="@+id/callDetailsFragment"
        android:name="com.rehyapp.calltimer.ui.callDetails.CallDetailsFragment"
        android:label="@string/title_call_details"
        tools:layout="@layout/fragment_call_details">
        <argument
            android:name="callIds"
            app:argType="long[]" />
    </fragment>
</navigation>
